tests/baselines/reference/parserGreaterThanTokenAmbiguity9.errors.txt
parserGreaterThanTokenAmbiguity9.ts(2,1): error TS1109: Expression expected.


==== parserGreaterThanTokenAmbiguity9.ts (1 errors) ====
    1 >>
    > 2;
    ~
!!! error TS1109: Expression expected.